--- a/page-1/index.html
+++ b/page-1/index.html
@@ -4,9 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>EX-2.1</title>
 </head>
 <body>
-    
+<div style="display: flex; gap: 30px">
+    <img src="./image/de8g74b-0127ef26-febe-4074-8ac3-b74dbde3b0a3.jpg" width="500px" height="500px" alt="">
+   <div>
+    <h1>itachi uchiha</h1>
+    <p>
+        If I had been open with you from 
+        the start… and looked you straight 
+        in the eyes and told you the truth, 
+        then I wouldn't have had to stand 
+        before you, from above, as a failure, 
+        telling you all of this. So this time, 
+        I want to impart this truth to you… You 
+        don't even have to forgive me. And no 
+        matter what you do from here on out, 
+        know this… I will love you always."
+    </p>
+</div>
+</div>  
+<div>
+    <img src="" alt="">
+</div> 
 </body>
 </html>
