მეორე გვერდის დამატება

--- a/page-1/index.html
+++ b/page-1/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EX-2.1</title>
 </head>
-<body>
+<>
 <div style="display: flex; gap: 30px">
     <img src="./image/de8g74b-0127ef26-febe-4074-8ac3-b74dbde3b0a3.jpg" width="500px" height="500px" alt="">
    <div>
@@ -25,8 +25,45 @@
     </p>
 </div>
 </div>  
-<div>
-    <img src="" alt="">
+<div style="display:flex; gap: 25px;" >
+   <div style="width:33%"> 
+    <img src="./image/768px-Sharingan_triple.svg.png" height="150px" width="150px" alt="">
+    <p>
+        The user can perform what is generically 
+        called Genjutsu: Sharingan. While there 
+        are various manifestations and purposes 
+        of the ability, the better known one is 
+        to, through eye contact, suggest thoughts
+        and actions to a target, coercing them to 
+        divulge information or act in a particular
+        way, potentially without the target's 
+        awareness.
+    </p>
+</div>
+<div style="width:33%">
+    <img src="./image/11-115469_mangekyou-sharingan-naruto-kakashi-mangekyou-sharingan.png" height="150px" width="150px" alt="">
+   <p>The Sharingan can be evolved into the Mangekyō 
+    Sharingan by experiencing the trauma of loss, 
+    granting unique, user-specific jutsu in addition
+    to the Sharingan's standard abilities. Awakening
+    the Mangekyō Sharingan will automatically fully
+    mature a Sharingan if it isn't already.
+   </p>
+   </div>
+   <div style="width:33%">
+   <img src="./image/download.jpeg" height="150px" width="150px" alt="">
+    <p>The Rinnegan (輪廻眼, literally meaning: Saṃsāra
+        Eye) is reputed as the most exalted eye amongst
+        the "Three Great Dōjutsu",[3] the others being
+        the Sharingan and the Byakugan. It is said
+        that in times of disorder, one who wields
+        the Rinnegan is sent down from the heavens
+        to become either a "God of Creation" who 
+        will calm the world or a "God of Destruction"
+        who will reduce everything to nothingness. 
+        The Rinnegan is characterised by concentric 
+        circles covering the eyeball</p>
+        </div>
 </div> 
 </body>
 </html>
