--- a/page-1/index.html
+++ b/page-1/index.html
@@ -6,10 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EX-2.1</title>
 </head>
-<>
 <div style="display: flex; gap: 30px">
     <img src="./image/de8g74b-0127ef26-febe-4074-8ac3-b74dbde3b0a3.jpg" width="500px" height="500px" alt="">
-   <div>
+   <div >
     <h1>itachi uchiha</h1>
     <p>
         If I had been open with you from 
@@ -25,9 +24,9 @@
     </p>
 </div>
 </div>  
-<div style="display:flex; gap: 25px;" >
+<div style="display:flex; gap: 25px; margin-top: 25px; " >
    <div style="width:33%"> 
-    <img src="./image/768px-Sharingan_triple.svg.png" height="150px" width="150px" alt="">
+    <a href="./index1.html"><img src="./image/768px-Sharingan_triple.svg.png" height="150px" width="150px" alt=""></a>
     <p>
         The user can perform what is generically 
         called Genjutsu: Sharingan. While there 
@@ -62,7 +61,8 @@
         will calm the world or a "God of Destruction"
         who will reduce everything to nothingness. 
         The Rinnegan is characterised by concentric 
-        circles covering the eyeball</p>
+        circles covering the eyeball
+    </p>
         </div>
 </div> 
 </body>
