--- a/page-1/index.html
+++ b/page-1/index.html
@@ -40,7 +40,7 @@
     </p>
 </div>
 <div style="width:33%">
-    <img src="./image/11-115469_mangekyou-sharingan-naruto-kakashi-mangekyou-sharingan.png" height="150px" width="150px" alt="">
+    <a href="./index2.html"> <img src="./image/11-115469_mangekyou-sharingan-naruto-kakashi-mangekyou-sharingan.png" height="150px" width="150px" alt=""></a>  
    <p>The Sharingan can be evolved into the Mangekyō 
     Sharingan by experiencing the trauma of loss, 
     granting unique, user-specific jutsu in addition
@@ -50,7 +50,7 @@
    </p>
    </div>
    <div style="width:33%">
-   <img src="./image/download.jpeg" height="150px" width="150px" alt="">
+   <a href="./index3.html"><img src="./image/download.jpeg" height="150px" width="150px" alt=""></a>
     <p>The Rinnegan (輪廻眼, literally meaning: Saṃsāra
         Eye) is reputed as the most exalted eye amongst
         the "Three Great Dōjutsu",[3] the others being
