--- a/page-1/index1.html
+++ b/page-1/index1.html
@@ -7,6 +7,28 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello world</h1>
+    <div style="display: flex; gap: 30px">
+    <img src="./image/600px-Sharingan_triple.svg.png" alt="">
+    <div>
+    <h1>Acquisition</h1>
+<p>
+When a wielder of this kekkei genkai
+experiences a powerful emotional 
+condition with regards to a person 
+precious to them, their brain releases 
+a special form of chakra that affects 
+the optic nerves, transforming the eyes
+into Sharingan; for that reason the 
+Sharingan is described as an "eye that
+reflects the heart" (心を写す瞳, Kokoro
+o utsusu hitomi). Often, as per 
+the Uchiha's so-called "Curse of Hatred",
+this emotion is a negative one, brought 
+on by stress or loss. The emotion 
+can also be positive, driven by a desire 
+to protect or reunite with a loved one.
+</p>
+</div>
+</div>
 </body>
 </html>
