--- a/page-1/index.html
+++ b/page-1/index.html
@@ -7,7 +7,7 @@
     <title>EX-2.1</title>
 </head>
 <div style="display: flex; gap: 30px">
-    <img src="./image/de8g74b-0127ef26-febe-4074-8ac3-b74dbde3b0a3.jpg" width="500px" height="500px" alt="">
+    <img src="./image/itachi.jpg" width="500px" height="500px" alt="">
    <div >
     <h1>itachi uchiha</h1>
     <p>
@@ -26,7 +26,7 @@
 </div>  
 <div style="display:flex; gap: 25px; margin-top: 25px; " >
    <div style="width:33%"> 
-    <a href="./index1.html"><img src="./image/768px-Sharingan_triple.svg.png" height="150px" width="150px" alt=""></a>
+    <a href="./index1.html" target="_blank"><img src="./image/sharingan.png" height="150px" width="150px" alt=""></a>
     <p>
         The user can perform what is generically 
         called Genjutsu: Sharingan. While there 
@@ -40,7 +40,7 @@
     </p>
 </div>
 <div style="width:33%">
-    <a href="./index2.html"> <img src="./image/11-115469_mangekyou-sharingan-naruto-kakashi-mangekyou-sharingan.png" height="150px" width="150px" alt=""></a>  
+    <a href="./index2.html" target="_blank"> <img src="./image/mangekyou1.png" height="150px" width="150px" alt=""></a>  
    <p>The Sharingan can be evolved into the Mangekyō 
     Sharingan by experiencing the trauma of loss, 
     granting unique, user-specific jutsu in addition
@@ -50,7 +50,7 @@
    </p>
    </div>
    <div style="width:33%">
-   <a href="./index3.html"><img src="./image/download.jpeg" height="150px" width="150px" alt=""></a>
+   <a href="./index3.html" target="_blank"><img src="./image/rinengan.jpeg" height="150px" width="150px" alt=""></a>
     <p>The Rinnegan (輪廻眼, literally meaning: Saṃsāra
         Eye) is reputed as the most exalted eye amongst
         the "Three Great Dōjutsu",[3] the others being
