--- a/page-1/index1.html
+++ b/page-1/index1.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sharingan</title>
 </head>
 <body>
     <div style="display: flex; gap: 30px">
-    <img src="./image/600px-Sharingan_triple.svg.png" alt="">
+    <img src="./image/sharingan.png" height="300" width="300" alt="">
     <div>
     <h1>Acquisition</h1>
 <p>
@@ -27,7 +27,48 @@ this emotion is a negative one, brought
 on by stress or loss. The emotion 
 can also be positive, driven by a desire 
 to protect or reunite with a loved one.
-</p>
+</p> 
+</div>
+</div>
+<div style="display: flex; gap: 30px">
+    <p>
+In the anime, it was shown that usually 
+after first acquiring this power, the
+user's enhanced perception will throw 
+off their timing, causing them to overstress 
+their bodies from trying to keep up with 
+the increased reaction time, forcing the 
+user to adjust to properly move with it. 
+A higher control of one's chakra is also 
+required to maintain its power for long. 
+It was also shown during emotional states 
+that begin to trigger the Sharingan's 
+awakening, it can temporarily blur the 
+person's eyesight until finally manifesting.
+[11] Assuming that the user is aware they 
+have awakened the Sharingan,[6] they are 
+thereafter able to freely use it.[12] When 
+first awakened, each Sharingan usually will 
+have only one tomoe (巴), although in some 
+case, they immediately gained two tomoe in 
+each of their eyes. Through emotional growth
+of extreme conditions, the Sharingan will 
+continue to develop, its full maturation 
+represented by a third tomoe. When Hagoromo
+awakened the Sharingan in the anime, he 
+had all three tomoe immediately. All the 
+Sharingan's abilities are available to the
+user from its earliest stage, but with 
+greater development comes greater proficiency 
+with those abilities. Example, with full maturation, 
+the Sharingan's ability to perceive all targets and 
+events around them is fully developed, which can 
+cause the user's movements to drastically differ 
+from their earlier movements if their Sharingan 
+matured mid-battle.
+        </p>
+<div style="display:flex; gap: 25px;" >
+    <img src="./image/sharingan2.webp" height="300" width="300" alt="">
 </div>
 </div>
 </body>
