--- a/page-1/index1.html
+++ b/page-1/index1.html
@@ -45,9 +45,9 @@ It was also shown during emotional states
 that begin to trigger the Sharingan's 
 awakening, it can temporarily blur the 
 person's eyesight until finally manifesting.
-[11] Assuming that the user is aware they 
-have awakened the Sharingan,[6] they are 
-thereafter able to freely use it.[12] When 
+Assuming that the user is aware they 
+have awakened the Sharingan, they are 
+thereafter able to freely use it. When 
 first awakened, each Sharingan usually will 
 have only one tomoe (巴), although in some 
 case, they immediately gained two tomoe in 
