--- a/page-1/index2.html
+++ b/page-1/index2.html
@@ -23,7 +23,7 @@ have historically misunderstood this criteria
 as the user needing to be responsible for the 
 person's death, and for that reason they developed 
 the practice of killing their closest friends in 
-order to gain the Mangekyō Sharingan.[3] Obito's 
+order to gain the Mangekyō Sharingan. Obito's 
 Mangekyō activated immediately after his trauma, 
 whereas, in Naruto Jinraiden, Sasuke's Mangekyō 
 didn't activate until several weeks afterwards. 
@@ -45,12 +45,12 @@ didn't activate until several weeks afterwards.
         the particular dōjutsu techniques, one can only 
         access them if they currently house the said eye, 
         even if they were the originator of the said technique. 
-        Once a user awakens the Mangekyō in both eyes,[4] they 
+        Once a user awakens the Mangekyō in both eyes, they 
         are able to perform Susanoo, even without either eye. 
         In addition to the unique techniques, the straight tomoe 
         (直巴, choku tomoe) of Madara's and Sasuke's Mangekyō 
-        Sharingan[5] grants them greater fluidity in their
-        movements when fighting.[6] Madara was able to sense 
+        Sharingan grants them greater fluidity in their
+        movements when fighting. Madara was able to sense 
         this form and later deduced that he and Sasuke must 
         be connected by more than blood.
         </p>
