--- a/page-1/index3.html
+++ b/page-1/index3.html
@@ -4,9 +4,65 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>rinnegan</title>
 </head>
 <body>
-    
+    <div style="display: flex; gap: 30px">
+        <img src="./image/rinengan.jpeg" alt="">
+        <div>
+        <h1>Acquisition</h1>
+        <p>
+The first person on Earth to wield 
+the Rinnegan was Hagoromo Ōtsutsuki,
+whose mother possessed the Rinne 
+Sharingan. In the anime, he obtained 
+his Rinnegan at the same time as his 
+Mangekyō Sharingan, which awakened as 
+a result of mortally wounding his brother.
+ Using the power of the Rinnegan, Hagoromo 
+saved the world from the Ten-Tails and created
+ninshū, the precursor to modern ninjutsu. For
+his contributions to the world, Hagoromo became 
+revered as the Sage of Six Paths, and both he 
+and his eyes rose to mythological status following 
+his death; even when the Rinnegan was later proven 
+to exist, some dismissed it as a random mutation.
+</p>
+</div>
+</div>
+
+<div style="display: flex; gap: 30px">
+<p>
+    It is possible for a Sharingan wielder 
+    to awaken a new Rinnegan by obtaining 
+    Hagoromo's chakra, either by combining 
+    the chakra of his sons, Indra and Asura, 
+    to recreate his own, or by directly 
+    receiving it from Hagoromo himself.
+    Black Zetsu spent centuries attempting 
+    to manipulate the reincarnations of Indra
+     and Asura into awakening the Rinnegan, 
+     but it was not until the time of Madara 
+     Uchiha — Indra's reincarnate — that this 
+     was successful. Madara implanted the 
+     flesh of Hashirama Senju — Asura's 
+     reincarnate — into his own body, causing 
+     a part of Asura's chakra to combine with 
+     Indra's. However, Madara's eyes did not
+      become Rinnegan until decades later, when
+      his natural lifespan was nearing its end;
+      this also restored his right eye's 
+      vision, which had been lost from his earlier use 
+      of Izanagi. Orochimaru and Kabuto Yakushi 
+      later hypothesised that the Sharingan can be 
+      evolved into the Rinnegan by combining Uchiha 
+      and Senju DNA. To that end, Kabuto successfully 
+      recreated the Rinnegan by infusing Hashirama's 
+      cells into Madara's reincarnated body, though 
+      these fake eyes did not have full access to the 
+      original's abilities.
+</p>
+<img src="./image/Rinnegan.avif" height="300px" width="300px" alt="">
+</div>
 </body>
 </html>
